--- a/src/Styles/sidebar.scss
+++ b/src/Styles/sidebar.scss
@@ -2,7 +2,7 @@
 
 .sidebar {
   margin-top: 100px;
-  padding-bottom: 5ave0px;
+  padding-bottom: 50px;
   position: fixed;
   height: 100vh;
   overflow-y: scroll;
