--- a/src/Styles/sidebar.css
+++ b/src/Styles/sidebar.css
@@ -1,6 +1,6 @@
 .sidebar {
   margin-top: 100px;
-  padding-bottom: 5ave0px;
+  padding-bottom: 50px;
   position: fixed;
   height: 100vh;
   overflow-y: scroll;
