--- a/src/Styles/users.css
+++ b/src/Styles/users.css
@@ -98,4 +98,10 @@ th button {
   align-items: center;
   flex-wrap: wrap;
   gap: 20px;
+}
+
+@media only screen and (max-width: 992px) {
+  .users {
+    margin-top: 50px;
+  }
 }/*# sourceMappingURL=users.css.map */
